// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should change circle size when using size prop 1`] = `
<div>
  <div
    class="rc-circle"
    style="width: 150px; height: 150px;"
  >
    <svg
      viewBox="0 0 1040 1040"
    >
      <path
        class="rc-circle__layer"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="fill: none; stroke-width: 40px;"
      />
      <path
        class="rc-circle__hover"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="stroke-width: 41px; stroke-dasharray: 0px 3140px;"
      />
    </svg>
  </div>
</div>
`;

exports[`Circle should change stroke linecap when using stroke-linecap prop 1`] = `
<div>
  <div
    class="rc-circle"
  >
    <svg
      viewBox="0 0 1040 1040"
    >
      <path
        class="rc-circle__layer"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="fill: none; stroke-width: 40px;"
      />
      <path
        class="rc-circle__hover"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="stroke-width: 41px; stroke-linecap: butt; stroke-dasharray: 0px 3140px;"
      />
    </svg>
  </div>
</div>
`;

exports[`Circle should render clockwise and anticlockwise correctly 1`] = `
<div>
  <div
    class="rc-circle"
  >
    <svg
      viewBox="0 0 1040 1040"
    >
      <path
        class="rc-circle__layer"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="fill: none; stroke-width: 40px;"
      />
      <path
        class="rc-circle__hover"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="stroke-width: 41px; stroke-dasharray: 2198px 3140px;"
      />
    </svg>
    <div
      class="rc-circle__text"
    >
      70%
    </div>
  </div>
</div>
`;

exports[`Circle should render clockwise and anticlockwise correctly 2`] = `
<div>
  <div
    class="rc-circle"
  >
    <svg
      viewBox="0 0 1040 1040"
    >
      <path
        class="rc-circle__layer"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 0 0, 1000 a 500, 500 0 1, 0 0, -1000"
        style="fill: none; stroke-width: 40px;"
      />
      <path
        class="rc-circle__hover"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 0 0, 1000 a 500, 500 0 1, 0 0, -1000"
        style="stroke-width: 41px; stroke-dasharray: 2198px 3140px;"
      />
    </svg>
    <div
      class="rc-circle__text"
    >
      70%
    </div>
  </div>
</div>
`;

exports[`Circle should render fill prop correctly 1`] = `
<div>
  <div
    class="rc-circle"
  >
    <svg
      viewBox="0 0 1040 1040"
    >
      <path
        class="rc-circle__layer"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="fill: #ff0000; stroke-width: 40px;"
      />
      <path
        class="rc-circle__hover"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="stroke-width: 41px; stroke-dasharray: 2198px 3140px;"
      />
    </svg>
  </div>
</div>
`;

exports[`Circle should render layerColor correctly 1`] = `
<div>
  <div
    class="rc-circle"
  >
    <svg
      viewBox="0 0 1040 1040"
    >
      <path
        class="rc-circle__layer"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="fill: none; stroke: #ebedf0; stroke-width: 40px;"
      />
      <path
        class="rc-circle__hover"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="stroke-width: 41px; stroke-dasharray: 2198px 3140px;"
      />
    </svg>
  </div>
</div>
`;

exports[`Circle should render linearGradient correctly 1`] = `
<div>
  <div
    class="rc-circle"
  >
    <svg
      viewBox="0 0 1040 1040"
    >
      <defs>
        <lineargradient
          class="linearGradient"
          id="rc-circle-13"
          x1="100%"
          x2="0%"
          y1="0%"
          y2="0%"
        >
          <stop
            offset="0%"
            stop-color="#3fecff"
          />
          <stop
            offset="100%"
            stop-color="#6149f6"
          />
        </lineargradient>
      </defs>
      <path
        class="rc-circle__layer"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="fill: none; stroke-width: 40px;"
      />
      <path
        class="rc-circle__hover"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        stroke="url(#rc-circle-13)"
        style="stroke: url(#rc-circle-13); stroke-width: 41px; stroke-dasharray: 2198px 3140px;"
      />
    </svg>
  </div>
</div>
`;

exports[`Circle should render rate correctly when rate is changed 1`] = `
<div>
  <div
    class="rc-circle"
  >
    <svg
      viewBox="0 0 1040 1040"
    >
      <path
        class="rc-circle__layer"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="fill: none; stroke-width: 40px;"
      />
      <path
        class="rc-circle__hover"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="stroke-width: 41px; stroke-dasharray: 0px 3140px;"
      />
    </svg>
  </div>
</div>
`;

exports[`Circle should render rate correctly when rate is changed 2`] = `
<div>
  <div
    class="rc-circle"
  >
    <svg
      viewBox="0 0 1040 1040"
    >
      <path
        class="rc-circle__layer"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="fill: none; stroke-width: 40px;"
      />
      <path
        class="rc-circle__hover"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="stroke-width: 41px; stroke-dasharray: 0px 3140px;"
      />
    </svg>
  </div>
</div>
`;

exports[`Circle should render text correctly 1`] = `
<div>
  <div
    class="rc-circle"
  >
    <svg
      viewBox="0 0 1040 1040"
    >
      <path
        class="rc-circle__layer"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="fill: none; stroke-width: 40px;"
      />
      <path
        class="rc-circle__hover"
        d="M 520 520 m 0, -500 a 500, 500 0 1, 1 0, 1000 a 500, 500 0 1, 1 0, -1000"
        style="stroke-width: 41px; stroke-dasharray: 2198px 3140px;"
      />
    </svg>
    <div
      class="rc-circle__text"
    >
      70%
    </div>
  </div>
</div>
`;
